Implemented drag and drop image in signup screen.